--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -106,7 +106,8 @@ settings:
 
 textures:
     pois:
-        url: images/poi_icons_18@2x.png
+        # EraserMaps the app only supports resources at a root asset dir
+        url: poi_icons_18@2x.png
         filtering: mipmap
         sprites:
             # define sprites: [x origin, y origin, width, height]
@@ -351,10 +352,11 @@ textures:
 
 sources:
     osm:
-        type: TopoJSON
-        #url: '//tileserver-dev-us-east-ext-538678355.us-east-1.elb.amazonaws.com/osm/all/{z}/{x}/{y}.topojson'
-        #url:  //localhost:8080//osm/all/{z}/{x}/{y}.topojson
-        url:  https://vector.mapzen.com/osm/all/{z}/{x}/{y}.topojson?api_key=vector-tiles-P6dkVl4
+        # EraserMaps the app only supports MVT format tiles
+        type: MVT
+        #url: '//tileserver-dev-us-east-ext-538678355.us-east-1.elb.amazonaws.com/osm/all/{z}/{x}/{y}.mvt'
+        #url:  //localhost:8080//osm/all/{z}/{x}/{y}.mvt
+        url:  https://vector.mapzen.com/osm/all/{z}/{x}/{y}.mvt?api_key=vector-tiles-HqUVidw
 
 cameras:
     isometric:
